--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=eh-nestjs
+DB_NAME=postgres
 CLD_CLOUD_NAME=saxakiil
 CLD_API_KEY=696328369324874
 CLD_API_SECRET=5tduMrQinW-XhhGwu4po4KG3A_Y
